Resolved problem with pygments - insted of .gitignore, I created an assume-unchanged index so it will not be staged if changed locally for working with rouge

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
 _site/
-_config.yml
+# za _config.yml sam sljedecu naredbu:
+# git update-index --assume-unchanged _config.yml
+# za vratiti:
+# git update-index --no-assume-unchanged _config.yml
